--- a/src/Domain/LTS.Module.Domain/LTS.Module.Domain.csproj
+++ b/src/Domain/LTS.Module.Domain/LTS.Module.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Persistence\LTS.Module.Persistence.Adapter\LTS.Module.Persistence.Adapter.csproj" />
+  </ItemGroup>
+
 </Project>
