"issue(#15): Implementing Infrastructure Models"

--- a/src/Infrastructure/LTS.RH.Infrastructure/LTS.RH.Infrastructure.csproj
+++ b/src/Infrastructure/LTS.RH.Infrastructure/LTS.RH.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Infrastructure\LTS.RH.Infrastructure\LTS.RH.Infrastructure.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
